--- a/source/stylesheets/layouts/_laptop.scss
+++ b/source/stylesheets/layouts/_laptop.scss
@@ -6,7 +6,9 @@
   #Logo{
     @include column(4, first);
     float:left;
-    padding-top:.6em;
+    padding-bottom:0;
+    margin-bottom:0;
+
     img{
       max-width:100%;
       float:left;
@@ -20,6 +22,9 @@
       text-align:right;
       padding-bottom:0;
       margin-bottom:0;
+      ul{
+        margin:0;
+      }
     }
   }
   nav.secondary ul{
