--- a/source/stylesheets/layouts/_mobile.scss
+++ b/source/stylesheets/layouts/_mobile.scss
@@ -1,7 +1,6 @@
 @mixin mobile {
   $column-count: 3;
   $max-width: 320px;
-  $gutter-width:  get-percent(4px);
   $column-width: (get-percent($max-width) / $column-count) - ($gutter-offset) ;
   #{$container} {
     @include grid(3);
@@ -17,12 +16,18 @@
   header nav {
     font-size:.9em;
     margin-left:0;
+    clear:left;
     ul{
       margin-left:0;
       padding-left:0;
       text-align:center;
       margin-top:0;
     }
+  }
+  #Logo{
+    @include column(3,last);
+    padding-top:9px;
+    img{float:left;margin-right:12px;}
   }
   [role=main] {
     @include column(3, first);
@@ -32,8 +37,6 @@
     clear:both;
     margin-top:48px;
   }
-
-
   .CTA {
     display: inline-block;
     @include column(3, last);
@@ -41,6 +44,40 @@
   }
   #page{
     margin-bottom:1.5em;
+  }
+  .readMore{
+    display:block;
+    background:#f00;
+    float:none;
+    text-align:center;
+    border-bottom:none;
+    border:none;
+    @include border-radius(3px);
+    margin-top:.5em;
+    background:$buttonBGColor;
+    background:$buttonBGColor url(../images/noise.png);
+    @include box-shadow(0 2px 6px rgba(0,0,0,0.2),
+                        inset 0 1px rgba(255,255,255,0.2),
+                        inset 0 10px 20px rgba(255,255,255,0.1),
+                        inset 0 -15px 30px rgba(0,0,0,0.3));
+    border:solid 2px darken($buttonBGColor, 10%);
+    text-decoration:none;
+    padding-top:.6em;
+    padding-bottom:.3em;
+    line-height:1.5;
+    color:$buttonColor;
+    @include text-shadow(1px 1px 1px rgba(255,255,255,.5)); 
+    padding-left:24px;
+    padding-right:24px;
+    @include border-radius(6px);
+    &:hover, &.active, &.active-trail{
+      color:lighten($buttonColor, 20%);
+      background:lighten($buttonBGColor, 20%);
+      @include box-shadow(none);
+      @include text-shadow(none);
+      border:solid 2px lighten($buttonBGColor, 20%);  
+    }
+
   }
   footer{
     padding-top:.5em;
